# midway-imgtool

./: .gitignore  BUILD.md  CMakeLists.txt  README.md  build.bat  build.ps1  img_convert.py  vcpkg.json
.opencode/plans/: bdd-plan.md
IT/: BUILD.BAT  MAKEFILE  dcfg.bat  it.c  it.hlp  it.inc  it.lnk  it3d.asm  it3d.inc  itimg.asm  itos.asm  ittex.asm  ittex.inc  notes.txt  putit.bat  readme.txt  wmpstruc.inc  wv.bat
WATCOM/: WATCOM.7z
loadimg/: agents.md  bbb.md  bdd.md  commandline.txt  compression.md  ghidra.md  regen.sh  regen_art.sh  test.sh  wmpstruc.inc
loadimg/binary/LOADW.reko/: LOADW.globals.c  LOADW_0800.asm  LOADW_0800.c  LOADW_0800.dis  LOADW_1054.asm  LOADW_1054.c  LOADW_1054.dis  LOADW_1463.asm  LOADW_1463.c  LOADW_1463.dis  LOADW_146C.asm  LOADW_146C.c  LOADW_146C.dis  LOADW_147D.asm  LOADW_147D.c  LOADW_147D.dis  LOADW_1481.asm  LOADW_1481.c  LOADW_1481.dis  LOADW_1484.asm  LOADW_1484.c  LOADW_1484.dis  LOADW_1492.asm  LOADW_1492.c  LOADW_1492.dis  LOADW_1496.asm  LOADW_1496.c  LOADW_1496.dis  LOADW_149A.asm  LOADW_149A.c  LOADW_149A.dis  LOADW_1809.asm  LOADW_180A.asm  LOADW_180A.c  LOADW_27FE.asm  LOADW_281E.asm  LOADW_381D.asm  LOADW_381D.c  LOADW_3DE8.asm
loadimg/build_win/: CMakeCache.txt  Makefile  cmake_install.cmake
loadimg/lod/: YOKOTEST.IRW
loadimg/output/: YOKOIMG.TBL
loadimg/output2/: IMGPAL.ASM  IMGTBL.GLO  YOKOTEST.IRW  YOKOTEST.LOD  YOKOTEST.TBL
loadimg/output3/: BAM.IRW  BAMIMG.TBL
loadimg/output4/: YOK_HIT2.IMG
loadimg/ref2/: IMGPAL.ASM  L2TEMP  MK2MIL.IRW  MK2MIL.TBL  MKHH.TBL  MKJC.TBL  MKLK.TBL  MKSA.TBL  OUT2.TXT
loadimg/ref2_nopad/: IMGTBL.GLO  MK2MIL.IRW  MK2MIL.TBL  MKHH.TBL  MKJC.TBL  MKLK.TBL  MKSA.TBL  OUTNP.TXT
loadimg/ref3/: IMGPAL.ASM  IMGTBL.GLO  L2TEMP  MK3MIL.IRW  MK3MIL.TBL  MKFN.TBL  MKRD.TBL  MKSA2.TBL  MKST.TBL  OUT.TXT
loadimg/ref4/: IMGPAL.ASM  IMGTBL.GLO  L2TEMP  MK4MIL.IRW  MK4MIL.TBL  MKGORO.TBL  MKJX.TBL  MKLK3.TBL  MKNJ.TBL  MKRD2.TBL  OUT4.TXT
loadimg/ref5/: IMGPAL.ASM  IMGTBL.GLO  L2TEMP  MK5MIL.IRW  MK5MIL.TBL  MKZIP.TBL  OUT.TXT
loadimg/ref6/: IMGPAL.ASM  IMGTBL.ASM  IMGTBL.GLO  MK6MIL.IRW  MK6MIL.TBL  MKARMS.TBL  MKBONUS.TBL  MKCOPY.TBL  MKFALL.TBL  MKFAT1.TBL  MKFAT2.TBL  MKFRIEND.TBL  MKFX.TBL  MKLK2.TBL  MKSEL.TBL  MKSPLIT.TBL  MKSUCK.TBL  OUT.TXT
loadimg/ref7/: BGNDEQU.H  BGNDPAL.ASM  BGNDTBL.ASM  BGNDTBL.GLO  IMGPAL.ASM  IMGTBL.ASM  IMGTBL.GLO  MK7MIL.IRW  MK7MIL.TBL  MKCHUNKS.TBL  MKTC.TBL  OUT.TXT  OUT7.TXT
loadimg/ref8/: MK8MIL.IRW  OUT8.TXT
loadimg/refArt/: ARROW.GLO  ARROW.TBL  BALL.TBL  BALLSHAD.GLO  BALLSHAD.TBL  BASTCYC.GLO  BASTCYC.TBL  BB.IRW  BB2.IRW  BB2_OUT.TXT  BB3.IRW  BB3_OUT.TXT  BB4.IRW  BB4_OUT.TXT  BB5_OUT.TXT  BB6.IRW  BB6_OUT.TXT  BB7.IRW  BB7_OUT.TXT  BB8.IRW  BB8_OUT.TXT  BBMUG.IRW  BBMUG_OUT.TXT  BBPAL.IRW  BBPAL_OUT.TXT  BBVDA.IRW  BBVDA_OUT.TXT  BB_OUT.TXT  BEHIND.TBL  BGNDTBL.ASM  CHEER.TBL  COURTFLR.TBL  CREDIT.TBL  CREDTURB.GLO  CREDTURB.TBL  CROWD.TBL  DUNKS.GLO  DUNKS2.GLO  FLAIL.GLO  FLAIL.TBL  (+46 more)
loadimg/refBBB/: BGNDEQU.H  BGNDPAL.ASM  BGNDTBL.ASM  BGNDTBL.GLO  MKBBB.IRW  OUT.TXT
loadimg/refht/: BBVDA.TBL  BBVDA.~BL  COWERING.GLO  CROWD2.GLO  DCS.GLO  HOOP2.GLO  HOOP2.~BL  IMGPAL.ASM  IMGTBL.ASM  L2TEMP  LIGHTEN.GLO  MISC.IRW  NAMES3.GLO  NAMES3.~BL  NEWHEADS.GLO  NEWMUGS.GLO  OUT.TXT  PLYRPBCK.GLO  SHATTER.GLO  SHATTER.~BL  STEALUP.TBL  STORM.GLO  SWPUSEQ.GLO  TEAMZONE.TBL  UGROUND.~BL  XXXHD.GLO
loadimg/seq/: BAM.SEQ  YOKO.SEQ
loadimg/src/: CMakeLists.txt  loadimg.c  loadimg.c.rej  toolchain-mingw.cmake
loadimg/work4/: BGNDTBL.ASM  BGNDTBL.GLO
loadimg/work5/: ABACKA.FRM  ABACKA.HDR  ABACKB.FRM  ABACKB.HDR  ABACKC.FRM  ABACKC.HDR  ABACKD.FRM  ABACKD.HDR  ALLDUDES.IMG  ALLENDS.BAT  ARENA.BDB  ARENA.BDD  ARMORY1.BDB  ARMORY1.BDD  ATRAX1.BDB  ATRAX1.BDD  ATRAX2.BDB  ATRAX2.BDD  ATRAX3.BDB  ATRAX3.BDD  ATRAX4.BDB  ATRAX4.BDD  ATTRACT1.IMG  BATTLE.BDB  BATTLE.BDD  BATTLE.IMG  BGNDEQU.H  BGNDPAL.ASM  BGNDTBL.ASM  BGNDTBL.GLO  BGNDTEST.LOD  BIGGORO.IMG  BLOOD.IMG  BOONPICS.IMG  BRIDGE1.BDB  BRIDGE1.BDD  CAGE1.IMG  CAGE10.IMG  CAGE2.IMG  CAGE3.IMG  (+346 more)
loadimg/workArt/: BB.IRW  BB2.IRW  BB3.IRW  BB4.IRW  BB6.IRW  BB7.IRW  BB8.IRW  BBMUG.IRW  BBVDA.IRW  BBVDA.TBL  BGNDEQU.H  BGNDPAL.ASM  BGNDTBL.ASM  BGNDTBL.GLO  IMGTBL.GLO  OUTDOOR.GLO  PNAMES.IMG
loadimg/workbank/: misc.lod
loadimg/workht/: ARNOLD.IMG  BARKLEY.IMG  BIRD.IMG  BLUCOURT.IMG  ELLIS.IMG  HOOPHT.IMG  HOOPJAM.IMG  JORDAN.IMG  KOBE.IMG  MAGIC.IMG  MISC.IRW  MKSTREET.IMG  NBACROWD.IMG  NBA_DNK4.IMG  NBA_DNK6.IMG  NBBD8.IMG  NINJAS.IMG  OURHDS2.IMG  OURHDS3.IMG  PNAMES.IMG  PNAMES3.IMG  SHANG.IMG  SHAQ.IMG  SMOKE.IMG  TERM.IMG  UGROUND2.IMG  WALKER.IMG  misc.lod
loadimg/workht/f10/: COWERING.TBL  STEALUP.TBL  hoop2.glo
loadimg/workht/f11/: NEWMUGS.TBL  crowd2.glo
loadimg/workht/f12/: BBVDA.TBL
loadimg/workht/f3/: DCS.TBL  NEWHEADS.TBL  NEWMUGS.TBL  PLYRPBCK.TBL  TEAMZONE.TBL
loadimg/workht/f4/: NEWHEADS.TBL  cowering.glo
loadimg/workht/f5/: COWERING.TBL  IMGPAL.ASM  PLYRPBCK.TBL  SHANG.TBL  STEALUP.TBL
loadimg/workht/f6/: PLYRDSQ3.TBL  PLYRPBCK.TBL  lighten.glo  storm.glo
loadimg/workht/f7/: IMGTBL.GLO  UGROUND1.TBL  plyrpbck.glo
loadimg/workht/f8/: CROWD2.TBL
loadimg/workht/f9/: STORM.TBL
loadimg/workht/f_final/: LIGHTEN.TBL  STEALUP.TBL  XXXHD.GLO  newheads.glo
loadimg/workht/f_final2/: STEALUP.TBL  names3.glo  shatter.glo
loadimg/workht/ff/: PLYRDSQ3.TBL  UGROUND1.TBL
loadimg/workht/folder/: HOOP2.TBL  IMGTBL.GLO  NAMES3.TBL  SHATTER.TBL  newmugs.glo  swpuseq.glo
loadimg/workht/folder2/: dcs.glo
platform/: compat.h  it3d_stub.asm  linux_hide_syms.ld  shim_file.c  shim_file.h  shim_file_thunks.asm  shim_input.c  shim_input.h  shim_vid.c  shim_vid.h
